Added event link

--- a/greater/index.html
+++ b/greater/index.html
@@ -269,7 +269,7 @@
             <polygon fill="#FFFFFF" points="7.738,3.643 2.568,0.242 0.238,1.792 5.395,5.185 0.238,8.577 2.568,10.126 7.738,6.726 
                 7.738,6.726 7.738,6.726 7.738,3.643 7.738,3.643 "/>
             </svg>
-            <a href="#">Join the movement <br/>2/25/16.</a>
+            <a href="https://greater2016.splashthat.com/">Join the movement <br/>2/25/16.</a>
         </div>
 
 
@@ -1266,7 +1266,6 @@
 
     <!-- Custom Theme JavaScript -->
     <script src="js/grayscale.js"></script>
-
 
     <!-- Custom Theme JavaScript -->
     <script src="parallaxy/parallaxy.js"></script>
