--- a/greater/index.html
+++ b/greater/index.html
@@ -210,7 +210,7 @@
                 </div>      
             </div>
         </div>
-        <div id="social">
+        <!-- <div id="social">
                 
                 <a href="#"><svg version="1.1" id=“email” xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                      width="37.887px" height="38.217px" viewBox="0 0 37.887 38.217" enable-background="new 0 0 37.887 38.217" xml:space="preserve">
@@ -260,7 +260,7 @@
 
 
 
-        </div>
+        </div> -->
         <div id="join">
             <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                  width="20.502px" height="10.505px" viewBox="0 0 20.502 10.505" enable-background="new 0 0 20.502 10.505" xml:space="preserve">
