Added sponsor links

--- a/greater/index.html
+++ b/greater/index.html
@@ -404,7 +404,7 @@
             <div class="col-md-12">
                
 
-                <a href="#" title="Seattle Urban Academy">
+                <a href="http://sua.org/" title="Seattle Urban Academy">
                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                          width="252.91px" height="104.667px" viewBox="0 0 252.91 104.667" enable-background="new 0 0 252.91 104.667"
                          xml:space="preserve">
@@ -491,7 +491,7 @@
                 </a>
 
 
-                <a href="#" title="GeekWire">
+                <a href="http://www.geekwire.com" title="GeekWire">
                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                          width="274.934px" height="114.667px" viewBox="0 0 274.934 114.667" enable-background="new 0 0 274.934 114.667"
                          xml:space="preserve">
@@ -538,7 +538,7 @@
 
                 </a>
 
-                <a href="#" title="City Year">
+                <a href="http://www.cityyear.org/" title="City Year">
 
                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                          width="124.101px" height="104.667px" viewBox="0 0 124.101 104.667" enable-background="new 0 0 124.101 104.667"
@@ -612,17 +612,17 @@
 
                 </a>
 
-                <a href="#" title="TAF">
+                <a href="http://techaccess.org/" title="TAF">
                     <img src="img/taf.png">
                 </a>
-                <a href="#" title="Urban Impact">
+                <a href="http://www.urbanimpactseattle.org/" title="Urban Impact">
                     <img src="img/urban-impact.png">
                 </a>
-                <a href="#" title="TAF">
+                <a href="https://www.codefellows.org/" title="Code Fellows">
                     <img src="img/codefellows.png">
                 </a>
 
-                <a href="#" title="Oklahoma State University">
+                <a href="http://go.okstate.edu/" title="Oklahoma State University">
                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                          width="155.934px" height="101.333px" viewBox="0 0 155.934 101.333" enable-background="new 0 0 155.934 101.333"
                          xml:space="preserve">
@@ -720,7 +720,7 @@
                     </g>
                     </svg>
                 </a>
-                <a href="#" title="Washington Technology Industry Association">
+                <a href="http://washingtontechnology.org/" title="Washington Technology Industry Association">
                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                          width="216.434px" height="114.667px" viewBox="0 0 216.434 114.667" enable-background="new 0 0 216.434 114.667"
                          xml:space="preserve">
