Added new video

--- a/greater/index.html
+++ b/greater/index.html
@@ -24,7 +24,20 @@
     <script src="https://use.typekit.net/zfm8ttb.js"></script>
     <script>try{Typekit.load({ async: true });}catch(e){}</script>
 
+    <!-- jQuery -->
+    <script src="js/jquery.js"></script>
 
+    <!-- Bootstrap Core JavaScript -->
+    <script src="js/bootstrap.min.js"></script>
+
+    <!-- Plugin JavaScript -->
+    <script src="js/jquery.easing.min.js"></script>
+
+    <!-- Custom Theme JavaScript -->
+    <script src="js/grayscale.js"></script>
+
+    <!-- Custom Theme JavaScript -->
+    <script src="parallaxy/parallaxy.js"></script>
 
     <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -1190,7 +1203,7 @@
             <div class="row">
              
                 <div class="col-md-4 col-md-offset-4">
-                  
+
                               <a href="#"><svg version="1.1" id=“email” xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                                    width="37.887px" height="38.217px" viewBox="0 0 37.887 38.217" enable-background="new 0 0 37.887 38.217" xml:space="preserve">
                                 <g>
@@ -1200,7 +1213,7 @@
                                 <circle fill-rule="evenodd" clip-rule="evenodd" fill="none" stroke="#FFFFFF" stroke-width="1.125" stroke-miterlimit="10" cx="18.944" cy="19.095" r="17.073"/>
                                 </svg></a>
 
-                              <a href="#"><svg version="1.1" id=“facebook” xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+<!--                               <a href="#"><svg version="1.1" id=“facebook” xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                                    width="37.887px" height="38.217px" viewBox="0 0 37.887 38.217" enable-background="new 0 0 37.887 38.217" xml:space="preserve">
                                 <path id="Facebook_1_" fill="#FFFFFF" d="M298.153,793.819c0,0.336,0,1.833,0,1.833h-1.341v2.239h1.341v6.152h2.758v-6.152h1.854
                                   c0,0,0.173-1.074,0.256-2.248c-0.241,0-2.096,0-2.096,0s0-1.307,0-1.533c0-0.23,0.299-0.538,0.597-0.538c0.297,0,0.923,0,1.501,0
@@ -1210,9 +1223,9 @@
                                   c0,0,0.173-1.074,0.256-2.248c-0.241,0-2.096,0-2.096,0s0-1.307,0-1.533c0-0.23,0.299-0.538,0.597-0.538c0.297,0,0.923,0,1.501,0
                                   c0-0.306,0-1.357,0-2.333c-0.772,0-1.653,0-2.042,0C17.113,12.706,17.178,14.949,17.178,15.286z"/>
                                 <circle fill-rule="evenodd" clip-rule="evenodd" fill="none" stroke="#FFFFFF" stroke-width="1.125" stroke-miterlimit="10" cx="18.943" cy="19.107" r="17.073"/>
-                                </svg></a>
+                                </svg></a> -->
 
-                              <a href="#"><svg version="1.1" id=“instagram” xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                              <a href="https://www.instagram.com/greatermovement/"><svg version="1.1" id=“instagram” xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                                    width="39.232px" height="37.833px" viewBox="0 0 39.232 37.833" enable-background="new 0 0 39.232 37.833" xml:space="preserve">
                                 <path fill-rule="evenodd" clip-rule="evenodd" fill="#FFFFFF" d="M14.99,12.521h9.52c0.902,0,1.642,0.743,1.642,1.643v9.52
                                   c0,0.896-0.739,1.643-1.642,1.643h-9.52c-0.902,0-1.64-0.746-1.64-1.643v-9.52C13.35,13.264,14.087,12.521,14.99,12.521
@@ -1225,7 +1238,7 @@
                                 <circle fill-rule="evenodd" clip-rule="evenodd" fill="none" stroke="#FFFFFF" stroke-width="1.125" stroke-miterlimit="10" cx="19.75" cy="18.922" r="17.073"/>
                                 </svg></a>
 
-                              <a href="#" id=""><svg version="1.1" id=“twitter” xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                              <a href="https://twitter.com/greatermovement" id=""><svg version="1.1" id=“twitter” xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                                    width="37.887px" height="38.217px" viewBox="0 0 37.887 38.217" enable-background="new 0 0 37.887 38.217" xml:space="preserve">
                                 <path fill="#FFFFFF" d="M25.346,14.701c-0.467,0.21-0.979,0.348-1.508,0.416c0.544-0.328,0.959-0.84,1.158-1.456
                                   c-0.512,0.302-1.074,0.521-1.67,0.639c-0.482-0.513-1.162-0.831-1.917-0.831c-1.454,0-2.626,1.181-2.626,2.627
@@ -1255,20 +1268,7 @@
         </div>
     </footer>
 
-    <!-- jQuery -->
-    <script src="js/jquery.js"></script>
 
-    <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
-
-    <!-- Plugin JavaScript -->
-    <script src="js/jquery.easing.min.js"></script>
-
-    <!-- Custom Theme JavaScript -->
-    <script src="js/grayscale.js"></script>
-
-    <!-- Custom Theme JavaScript -->
-    <script src="parallaxy/parallaxy.js"></script>
 
 
 
