Updated footer text

--- a/greater/index.html
+++ b/greater/index.html
@@ -1237,9 +1237,9 @@
                                 <circle fill-rule="evenodd" clip-rule="evenodd" fill="none" stroke="#FFFFFF" stroke-width="1.125" stroke-miterlimit="10" cx="18.943" cy="18.672" r="17.073"/>
                                 </svg></a>
 
+                                <p>GREATER is based in sunny Seattle, with additional outreach in Stillwater, Oklahoma. Want to give your time, talent or treasure? Have a quick question? We’d love to hear from you!</p>
 
-
-                                <div id="wufoo-z1w39oby1qf6zkh" style="background-color:transparent; margin-top: 100px;">
+                                <div id="wufoo-z1w39oby1qf6zkh" style="background-color:transparent">
                                 Fill out my <a href="https://greaterf.wufoo.com/forms/z1w39oby1qf6zkh">online form</a>.
                                 </div>
                                 <div id="wuf-adv" style="font-family:inherit;font-size: small;color:#a7a7a7;text-align:center;display:block;">Online contact and registration forms from <a href="http://www.wufoo.com">Wufoo</a>.</div>
