Fixed spelling error

--- a/greater/index.html
+++ b/greater/index.html
@@ -1283,7 +1283,7 @@
              
                 <div class="col-md-6 col-md-offset-3">
                   
-                    <h3>“ THE FUTURE DOSN’T BELONG TO THE FAINTHEARTED; IT BELONGS TO THE BRAVE.”</h3>
+                    <h3>“ THE FUTURE DOESN’T BELONG TO THE FAINTHEARTED; IT BELONGS TO THE BRAVE.”</h3>
                     <a class="btn btn-default btn-lg" id="play" href="https://www.paypal.com/us/cgi-bin/webscr?cmd=_flow&SESSION=BADlt94xyfkl5dr1VmfiUTyUcY6RgqwLz8iZmbnn_ma4RvAJqM7wCXIJ2NG&dispatch=5885d80a13c0db1f8e263663d3faee8defcd6970d4fd9d661117ac2649af92bb" class="btn btn-default btn-lg">
                         Donate via Paypal
                     </a>
