Changes for launch

--- a/greater/index.html
+++ b/greater/index.html
@@ -103,9 +103,10 @@
                       <!--   <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a> -->
-                        <a id="play" href="#about" class="btn btn-default btn-lg">
+                        <a id="play" href="#about" class="btn btn-lg">
                             <h1>Greater</h1>
                         </a>
+
 
                       <div class="elements">  
                         <svg version="1.1" id="greaterLogo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -212,7 +213,13 @@
                     </div>
                 </div>      
             </div>
+
         </div>
+
+
+        <div id="gvideo"></div>
+
+
         <!-- <div id="social">
                 
                 <a href="#"><svg version="1.1" id=“email” xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -272,19 +279,20 @@
             <polygon fill="#FFFFFF" points="7.738,3.643 2.568,0.242 0.238,1.792 5.395,5.185 0.238,8.577 2.568,10.126 7.738,6.726 
                 7.738,6.726 7.738,6.726 7.738,3.643 7.738,3.643 "/>
             </svg>
-            <a href="https://greater2016.splashthat.com/">Join the movement <br/>2/25/16.</a>
+            <a href="https://greater2016.splashthat.com/"></a>
         </div>
 
 
 
     </header>
 
+
     <!-- About Section -->
     <section id="about" class="container content-section general">
         <div class="row">
             <div class="col-md-5 col-md-offset-1 about-left">
                 <h2 class='big page-number'>About</h2>
-                <p>Through mentoring and leadership development, GREATER aims to equip the next generation of change-makers with the tools to reach their highest potential.</p>
+                <p>Through the power of sport and technology, Greater is aimed at redefining education so that ALL students are equipped for 21st Century opportunities</p>
  
 <p>We believe the answer to the problems we’re facing in the world today can be solved once we create a deeper roster of leaders who are willing to serve.</p> 
 
@@ -292,7 +300,7 @@
 
 <p>To this end, GREATER is diving deep into the communities its serving — from Seattle to Stillwater — and partnering with existing schools, youth groups, nonprofit organizations and businesses in those communities not to create new leaders, but to work with and reveal the existing leader in each of us. </p>
 
-<p>Through <mark>exposure, access and education</mark> boosted by neighborhood partnerships, we believe we can foster change. Our goal is to break the cycle of at-risk youth to create a new class of global citizens who are equipped to grow through their circumstances with personal responsibilities to their communities — and the world.</p>
+<p>Through exposure, access and education boosted by neighborhood partnerships, we believe we can foster change. Our goal is to break the cycle of at-risk youth to create a new class of global citizens who are equipped to grow through their circumstances with personal responsibilities to their communities — and the world.</p>
  
             </div>
             <div style="height:700px;" data-parallaxy class="col-md-4 col-md-offset-1">               
@@ -303,22 +311,22 @@
             <div class="col-md-4 col-md-offset-1 about-quote">               
                 <svg version="1.1" id="about-dots" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                      width="81.493px" height="82.065px" viewBox="0 0 81.493 82.065" enable-background="new 0 0 81.493 82.065" xml:space="preserve">
-                <circle fill="#939598" cx="2.5" cy="2.5" r="2.5"/>
-                <circle fill="#939598" cx="27.5" cy="2.5" r="2.5"/>
-                <circle fill="#939598" cx="52.417" cy="2.5" r="2.5"/>
-                <circle fill="#939598" cx="77.417" cy="2.5" r="2.5"/>
-                <circle fill="#939598" cx="2.5" cy="27.5" r="2.5"/>
-                <circle fill="#939598" cx="27.5" cy="27.5" r="2.5"/>
-                <circle fill="#939598" cx="52.417" cy="27.5" r="2.5"/>
-                <circle fill="#939598" cx="77.417" cy="27.5" r="2.5"/>
-                <circle fill="#939598" cx="2.5" cy="52.5" r="2.5"/>
-                <circle fill="#939598" cx="27.5" cy="52.5" r="2.5"/>
-                <circle fill="#939598" cx="52.417" cy="52.5" r="2.5"/>
-                <circle fill="#939598" cx="77.417" cy="52.5" r="2.5"/>
-                <circle fill="#939598" cx="2.5" cy="77.5" r="2.5"/>
-                <circle fill="#939598" cx="27.5" cy="77.5" r="2.5"/>
-                <circle fill="#939598" cx="52.417" cy="77.5" r="2.5"/>
-                <circle fill="#939598" cx="77.417" cy="77.5" r="2.5"/>
+                      <circle fill="#939598" cx="2.5" cy="2.5" r="2.5"/>
+                      <circle fill="#939598" cx="27.5" cy="2.5" r="2.5"/>
+                      <circle fill="#939598" cx="52.417" cy="2.5" r="2.5"/>
+                      <circle fill="#939598" cx="77.417" cy="2.5" r="2.5"/>
+                      <circle fill="#939598" cx="2.5" cy="27.5" r="2.5"/>
+                      <circle fill="#939598" cx="27.5" cy="27.5" r="2.5"/>
+                      <circle fill="#939598" cx="52.417" cy="27.5" r="2.5"/>
+                      <circle fill="#939598" cx="77.417" cy="27.5" r="2.5"/>
+                      <circle fill="#939598" cx="2.5" cy="52.5" r="2.5"/>
+                      <circle fill="#939598" cx="27.5" cy="52.5" r="2.5"/>
+                      <circle fill="#939598" cx="52.417" cy="52.5" r="2.5"/>
+                      <circle fill="#939598" cx="77.417" cy="52.5" r="2.5"/>
+                      <circle fill="#939598" cx="2.5" cy="77.5" r="2.5"/>
+                      <circle fill="#939598" cx="27.5" cy="77.5" r="2.5"/>
+                      <circle fill="#939598" cx="52.417" cy="77.5" r="2.5"/>
+                      <circle fill="#939598" cx="77.417" cy="77.5" r="2.5"/>
                 </svg>
 
                 <p><b>Through <u>exposure</u>, <u>access</u> and <u>education</u> boosted by neighborhood partnerships, we believe we can foster change.</b></p>
@@ -354,13 +362,6 @@
                         <p>GREATER Foundation</p>
                     </span>
                 </div>
-                <div class="pax-3">
-                    <span>
-                        <h4>Trish Millines Dziko</h4>
-                        <p>Co-founder and Chief Executive Director</p>
-                        <p><a href="http://techaccess.org/">Technology Access Foundation</a></p>
-                    </span>
-                </div>
                 <div class="pax-4">
                     <span>
                         <h4>Matt McIlwain</h4>
@@ -394,6 +395,14 @@
                         <h4>Sharon Okamoto</h4>
                         <p>Executive Director and Principal</p>
                         <p><a href="http://sua.org/">Seattle Urban Academy</a></p>
+                    </span>
+                </div>
+
+                <div class="pax-3">
+                    <span>
+                        <!-- <h4>Trish Millines Dziko</h4>
+                        <p>Co-founder and Chief Executive Director</p>
+                        <p><a href="http://techaccess.org/">Technology Access Foundation</a></p> -->
                     </span>
                 </div>
             </div>
@@ -615,9 +624,6 @@
 
                 </a>
 
-                <a href="http://techaccess.org/" title="TAF">
-                    <img src="img/taf.png">
-                </a>
                 <a href="http://www.urbanimpactseattle.org/" title="Urban Impact">
                     <img src="img/urban-impact.png">
                 </a>
@@ -1064,7 +1070,7 @@
                     <h2 class='big page-number'>The movement</h2>
                     <h3>Technology</h3>
 
-                    <p>Our technology initiative is a social movement driven by a coalition of community-based organizations working collaboratively to increase access to <mark>education, employment and entrepreneurship</mark> in technology-related fields.</p>
+                    <p>Our technology initiative is a social movement driven by a coalition of community-based organizations working collaboratively to increase access to education, employment and entrepreneurship in technology-related fields.</p>
 
                     <p>We believe the answer to the issues we face in economic inequality and underrepresentation is directly related to overlooking the next generation and youth in our communities. </p>
                     
@@ -1108,7 +1114,7 @@
         <div class="row">
 
             <div class="col-md-3 col-md-offset-1">
-                <h2 class='big'>Our story</h2>               
+                <h2 class='big page-number'>Our story</h2>               
                 <p><b>“There is no greater love than this; that a man would lay down his life for the sake of his friends.” <u>John 15:13</u> </b></p>
                 <svg version="1.1" id="story-dots" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                      width="81.493px" height="82.065px" viewBox="0 0 81.493 82.065" enable-background="new 0 0 81.493 82.065" xml:space="preserve">
