Updated fellows pics

--- a/greater/index.html
+++ b/greater/index.html
@@ -6,8 +6,22 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
+    <link rel="canonical" href="http://www.begreater.org/"/>
+    <meta property="og:site_name" content="The Greater Foundation"/>
+    <meta property="og:title" content="home"/>
+    <meta property="og:url" content="http://www.begreater.org/"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:description" content="BE GREATER."/>
+    <meta itemprop="name" content="home"/>
+    <meta itemprop="url" content="http://www.begreater.org/"/>
+    <meta itemprop="description" content="BE GREATER."/>
+    <meta name="twitter:title" content="home"/>
+    <meta name="twitter:url" content="http://www.begreater.org/"/>
+    <meta name="twitter:card" content="summary"/>
+    <meta name="twitter:description" content="BE GREATER."/>
+    <meta name="description" content="BE GREATER." />
+
 
     <title>Greater Foundation</title>
 
@@ -400,14 +414,15 @@
 
                 <div class="pax-3">
                     <span>
-                        <!-- <h4>Trish Millines Dziko</h4>
-                        <p>Co-founder and Chief Executive Director</p>
-                        <p><a href="http://techaccess.org/">Technology Access Foundation</a></p> -->
+                        <h4>Lucas Kartic</h4>
+                        <!-- <p>Co-founder and Chief Executive Director</p> -->
+                        <p><a href="http://techaccess.org/">Turning Point</a></p>
                     </span>
                 </div>
             </div>
 
         </div>
+
     </section>
 
     <!-- Contact Section -->
@@ -1042,7 +1057,38 @@
 
                     <p><b>Technology companies are hungry for diversity. Diversity in background, in thinking, in education.</b></p>
 
-                    <img src="img/stairs.jpg" width=100% height=auto/>
+                  
+                  <div class="fellows taiwan">
+                    <img src="img/fellows-taiwan.jpg">
+                    <h3>Taiwan Easterling</h3>
+                    <p>FSU / Track / Baseball</p>
+                    <a href="#">More</a>
+                    <div>
+                      <p>Growing up in Magee, Mississippi allotted numerous sport opportunities for Taiwan Easterling. After playing football and baseball on a both a collegiate and professional level, Taiwan is in the midst of balancing his work in construction management, and pursuing a Master’s degree in Project management with a minor in entrepreneurship and emphasis of data analytics. During his fellowship with the Greater Foundation, Taiwan hopes to develop new skills to pass forward others and give back to his community.</p>
+                    </div>
+                  </div>
+
+                  <div class="fellows britney">
+                    <img src="img/fellows-britney.jpg">
+                    <h3>Britney Presley</h3>
+                    <p>OSU / Track</p>
+                    <a href="#">More</a>
+                    <div>
+                      <p>As a fierce competitor in track and field, student-athlete Britney Pressley balances sports life with a passion for business. After being selected for the Greater Fellowship program, Britney hopes to utilize the tools and skill sets learned from the program, and apply them to her current pursuit of receiving her master’s degree in Social/Corporate Entrepreneurship. “As a Fellow of the Greater Foundation, I want to inspire people around me with the lessons and skills I develop through my tenure, in addition to giving back to the community”.</p>
+                    </div>
+                  </div>
+
+                  <div class="fellows michael">
+                    <img src="img/fellows-michael.jpg">
+                    <h3>Michael Molinari</h3>
+                    <p>WVU / Football</p>
+                    <a href="#">More</a>
+                    <div>
+                      <p>Michael Molinari balances the demand of being a full-time student with the responsibility of being a student athlete at West Virginia University. While pursuing his MBA at WVU, Michael’s involvement with the Greater Foundation provides opportunities to give back to communities, and build a foundation of skill sets needed for his pursuit of a career in business. After learning about the Fellowship program with the Greater Foundation, Michael states that “he believes in the mission of Greater and what it stands for, which inspires me to serve and give back to others around me”.</p>
+                    </div>
+                  </div>
+
+                  <!-- <img src="img/stairs.jpg" width=100% height=auto/> -->
 
 
                   <div id="movement-slashes">
