--- a/greater/index.html
+++ b/greater/index.html
@@ -350,7 +350,7 @@
                       <circle fill="#939598" cx="77.417" cy="77.5" r="2.5"/>
                 </svg>
 
-                <p><b>Through <u>exposure</u>, <u>access</u> and <u>education</u> boosted by neighborhood partnerships, we believe we can foster change.</b></p>
+                <p><b>Through <u>exposure</u>, <u>access</u>, and <u>education</u> boosted by neighborhood partnerships, we believe we can foster change.</b></p>
 
             </div>
         </div>
