--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <div class="pure-u-1-8 pure-u-md-1-6"></div>
             <div class="pure-u-3-4 pure-u-md-2-3">
                 <h2>UW Homepage</h2>
-                <p><b>Responsibilities:</b> Design, HTML, and CSS. Light JS and PHP.</p>
+                <p><b>Responsibilities:</b> Design, JavaScript, HTML, and CSS.</p>
                 <p><b>Tech:</b> WordPress, Less, Git, Grunt, Backbone.js, Bootstrap.</p>
                 <p><b>Link: </b><a href="http://www.uw.edu/">uw.edu</a></p>
             </div>
@@ -94,10 +94,10 @@
             <div class="pure-u-md-3-4">
                 <div class="pure-g">
                     <div class="pure-u-md-3-4 desktop">
-                        <img src="img/project-2-boundless.jpg">
+                        <img src="img/project-2-greater.jpg">
                     </div>
                     <div class="pure-u-md-1-4 mobile">
-                        <img src="img/project-2-boundless-mobile.png">
+                        <img src="img/project-2-greater-mobile.png">
                     </div>
                 </div>
             </div>
@@ -107,10 +107,10 @@
         <div class="pure-g info">
             <div class="pure-u-1-8 pure-u-md-1-6"></div>
             <div class="pure-u-3-4 pure-u-md-2-3">
-                <h2>UW student experience site</h2>
-                <p><b>Responsibilities:</b> Design, HTML, CSS, JS, and PHP.</p>
-                <p><b>Tech:</b> WordPress, Less, Git, Grunt, Backbone.js, Bootstrap.</p>
-                <p><b>Link: </b><a href="http://www.uw.edu/boundless">uw.edu/boundless</a></p>
+                <h2>Seahawks' Russell Okung's charity</h2>
+                <p><b>Responsibilities:</b> Interaction design, full development.</p>
+                <p><b>Tech:</b> Less, Git, Grunt, jQuery, Bootstrap.</p>
+                <p><b>Link: </b><a href="http://www.begreater.org">begreater.org</a></p>
             </div>
             <div class="pure-u-1-8 pure-u-md-1-6"></div>
         </div>
@@ -127,10 +127,10 @@
             <div class="pure-u-md-3-4">
                 <div class="pure-g">
                     <div class="pure-u-md-3-4 desktop">
-                        <img src="img/project-3-brand.jpg">
+                        <img src="img/project-10-husky100.jpg">
                     </div>
                     <div class="pure-u-md-1-4 mobile">
-                        <img src="img/project-3-brand-mobile.png">
+                        <img src="img/project-10-husky100-mobile.png">
                     </div>
                 </div>
             </div>
@@ -140,10 +140,10 @@
         <div class="pure-g info">
             <div class="pure-u-1-8 pure-u-md-1-6"></div>
             <div class="pure-u-3-4 pure-u-md-2-3">
-                <h2>UW brand portal</h2>
-                <p><b>Responsibilities:</b> Design, HTML, and CSS. Light JS and PHP.</p>
+                <h2>Husky 100</h2>
+                <p><b>Responsibilities:</b> JavaScript, Interaction design, HTML, and CSS.</p>
                 <p><b>Tech:</b> WordPress, Less, Git, Grunt, Backbone.js, Bootstrap.</p>
-                <p><b>Link: </b><a href="http://www.uw.edu/brand">uw.edu/brand</a></p>
+                <p><b>Link: </b><a href="http://www.uw.edu/husky100">uw.edu/husky100</a></p>
             </div>
             <div class="pure-u-1-8 pure-u-md-1-6"></div>
         </div>
@@ -205,8 +205,8 @@
         <div class="pure-g info">
             <div class="pure-u-1-8 pure-u-md-1-6"></div>
             <div class="pure-u-3-4 pure-u-md-2-3">
-                <h2>Intramural Athletics</h2>
-                <p><b>Responsibilities:</b> Design, HTML, and CSS. Light JS and PHP.</p>
+                <h2>UW Web Overall Theme</h2>
+                <p><b>Responsibilities:</b> Design, JavaScript, HTML, and CSS.</p>
                 <p><b>Tech:</b> WordPress, Less, Git, Grunt, Backbone.js, Bootstrap.</p>
                 <p><b>Link: </b><a href="http://www.uw.edu/ima">uw.edu/ima</a></p>
             </div>
@@ -225,10 +225,10 @@
             <div class="pure-u-md-3-4">
                 <div class="pure-g">
                     <div class="pure-u-md-3-4 desktop">
-                        <img src="img/project-4-admissions.jpg">
+                        <img src="img/project-8-seeds.jpg">
                     </div>
                     <div class="pure-u-md-1-4 mobile">
-                        <img src="img/project-4-admissions-mobile.png">
+                        <img src="img/project-8-seeds-mobile.png">
                     </div>
                 </div>
             </div>
@@ -238,10 +238,10 @@
         <div class="pure-g info">
             <div class="pure-u-1-8 pure-u-md-1-6"></div>
             <div class="pure-u-3-4 pure-u-md-2-3">
-                <h2>New students admission</h2>
-                <p><b>Responsibilities:</b> Design, HTML, CSS, JS, and PHP.</p>
-                <p><b>Tech:</b> WordPress, Less, Git, Grunt, Backbone.js, Bootstrap.</p>
-                <p><b>Link: </b><a href="http://www.uw.edu/newhuskies">uw.edu/newhuskies</a></p>
+                <h2>Growing Veterans immersive story</h2>
+                <p><b>Responsibilities:</b> Interaction design, HTML, CSS, JavaScript, and PHP.</p>
+                <p><b>Tech:</b> GSAP, WordPress, Less, Git, Grunt, Backbone.js, Bootstrap.</p>
+                <p><b>Link: </b><a href="www.washington.edu/boundless/growing-veterans/">uw.edu/boundless/growing-veterans/</a></p>
             </div>
             <div class="pure-u-1-8 pure-u-md-1-6"></div>
         </div>
@@ -280,6 +280,37 @@
 
 </div>
 
+<!-- Piece 7 -->
+
+<div class="project project-7 dark">
+
+        <div class="pure-g images">
+            <div class="pure-u-md-1-8"></div>
+            <div class="pure-u-md-3-4">
+                <div class="pure-g">
+                    <div class="pure-u-md-3-4 desktop">
+                        <img src="img/project-9-alternative.jpg">
+                    </div>
+                    <div class="pure-u-md-1-4 mobile">
+                        <img src="img/project-9-alternative-mobile.png">
+                    </div>
+                </div>
+            </div>
+            <div class="pure-u-md-1-8"></div>
+        </div>
+
+        <div class="pure-g info">
+            <div class="pure-u-1-8 pure-u-md-1-6"></div>
+            <div class="pure-u-3-4 pure-u-md-2-3">
+                <h2>Alternative Spring Break immersive story</h2>
+                <p><b>Responsibilities:</b> Interaction design, HTML, CSS, JavaScript, and PHP.</p>
+                <p><b>Tech:</b> GSAP, WordPress, Less, Git, Grunt, Backbone.js, Bootstrap.</p>
+                <p><b>Link: </b><a href="www.washington.edu/boundless/alternative-spring-break/">uw.edu/boundless/alternative-spring-break/</a></p>
+            </div>
+            <div class="pure-u-1-8 pure-u-md-1-6"></div>
+        </div>
+
+</div>
 
     </body>
 </html>
