--- a/index.html
+++ b/index.html
@@ -52,6 +52,39 @@
             <div class="pure-u-0 pure-u-md-1-8"></div>
         </div>
 
+
+<div class="project project-2 dark">
+
+        <div class="pure-g images">
+            <div class="pure-u-md-1-8"></div>
+            <div class="pure-u-md-3-4">
+                <div class="pure-g">
+                    <div class="pure-u-md-3-4 desktop">
+                        <img src="img/project-2-boundless.jpg">
+                    </div>
+                    <div class="pure-u-md-1-4 mobile">
+                        <img src="img/project-2-boundless-mobile.png">
+                    </div>
+                </div>
+            </div>
+            <div class="pure-u-md-1-8"></div>
+        </div>
+
+        <div class="pure-g info">
+            <div class="pure-u-1-8 pure-u-md-1-6"></div>
+            <div class="pure-u-3-4 pure-u-md-2-3">
+                <h2>UW Campaign site</h2>
+                <p><b>Responsibilities:</b> JS, PHP, HTML, and CSS.</p>
+                <p><b>Tech:</b> WordPress, Less, Git, Grunt, Bootstrap</p>
+                <p><b>Link: </b><a href="http://www.uw.edu/boundless">uw.edu/boundless</a></p>
+            </div>
+            <div class="pure-u-1-8 pure-u-md-1-6"></div>
+        </div>
+
+</div>
+
+
+
 <!-- Piece 1 -->
 
 <div class="project project-1">
