--- a/greater/index.html
+++ b/greater/index.html
@@ -1449,7 +1449,7 @@
     <script src="js/jquery.easing.min.js"></script>
 
     <!-- Custom Theme JavaScript -->
-    <script src="js/grayscale.js"></script>
+    <script src="js/main.js"></script>
 
     <!-- Custom Theme JavaScript -->
     <script src="parallaxy/parallaxy.js"></script>
