Added new panel

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="pure-g info">
             <div class="pure-u-1-8 pure-u-md-1-6"></div>
             <div class="pure-u-3-4 pure-u-md-2-3">
-                <h2>UW Campaign site</h2>
+                <h2>UW Campaign site &amp; Immersive Stories</h2>
                 <p><b>Responsibilities:</b> JS, PHP, HTML, and CSS.</p>
                 <p><b>Tech:</b> WordPress, Less, Git, Grunt, Bootstrap</p>
                 <p><b>Link: </b><a href="http://www.uw.edu/boundless">uw.edu/boundless</a></p>
