--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                 <h2>Growing Veterans immersive story</h2>
                 <p><b>Responsibilities:</b> Interaction design, HTML, CSS, JavaScript, and PHP.</p>
                 <p><b>Tech:</b> GSAP, WordPress, Less, Git, Grunt, Backbone.js, Bootstrap.</p>
-                <p><b>Link: </b><a href="www.washington.edu/boundless/growing-veterans/">uw.edu/boundless/growing-veterans/</a></p>
+                <p><b>Link: </b><a href="http://www.washington.edu/boundless/growing-veterans/">uw.edu/boundless/growing-veterans/</a></p>
             </div>
             <div class="pure-u-1-8 pure-u-md-1-6"></div>
         </div>
@@ -338,7 +338,7 @@
                 <h2>Alternative Spring Break immersive story</h2>
                 <p><b>Responsibilities:</b> Interaction design, HTML, CSS, JavaScript, and PHP.</p>
                 <p><b>Tech:</b> GSAP, WordPress, Less, Git, Grunt, Backbone.js, Bootstrap.</p>
-                <p><b>Link: </b><a href="www.washington.edu/boundless/alternative-spring-break/">uw.edu/boundless/alternative-spring-break/</a></p>
+                <p><b>Link: </b><a href="http://www.washington.edu/boundless/alternative-spring-break/">uw.edu/boundless/alternative-spring-break/</a></p>
             </div>
             <div class="pure-u-1-8 pure-u-md-1-6"></div>
         </div>
