--- a/index.html
+++ b/index.html
@@ -251,17 +251,17 @@
 
 <!-- Piece 7 -->
 
-<div class="project project-4 dark">
+<div class="project project-7 dark">
 
         <div class="pure-g images">
             <div class="pure-u-md-1-8"></div>
             <div class="pure-u-md-3-4">
                 <div class="pure-g">
                     <div class="pure-u-md-3-4 desktop">
-                        <img src="img/project-8-seeds.jpg">
+                        <img src="img/project-10-albothellternative.jpg">
                     </div>
                     <div class="pure-u-md-1-4 mobile">
-                        <img src="img/project-8-seeds-mobile.png">
+                        <img src="img/project-10-bothell-mobile.png">
                     </div>
                 </div>
             </div>
@@ -271,16 +271,15 @@
         <div class="pure-g info">
             <div class="pure-u-1-8 pure-u-md-1-6"></div>
             <div class="pure-u-3-4 pure-u-md-2-3">
-                <h2>Growing Veterans immersive story</h2>
+                <h2>Bothell Video Game Studio immersive story</h2>
                 <p><b>Responsibilities:</b> Interaction design, HTML, CSS, JavaScript, and PHP.</p>
                 <p><b>Tech:</b> GSAP, WordPress, Less, Git, Grunt, Backbone.js, Bootstrap.</p>
-                <p><b>Link: </b><a href="http://www.washington.edu/boundless/growing-veterans/">uw.edu/boundless/growing-veterans/</a></p>
+                <p><b>Link: </b><a href="http://www.washington.edu/boundless/bothell-gaming/">uw.edu/boundless/alternative-spring-break/</a></p>
             </div>
             <div class="pure-u-1-8 pure-u-md-1-6"></div>
         </div>
 
 </div>
-
 
 <!-- Piece 6 -->
 
@@ -315,17 +314,20 @@
 
 <!-- Piece 7 -->
 
-<div class="project project-7 dark">
+
+
+
+<div class="project project-4 dark">
 
         <div class="pure-g images">
             <div class="pure-u-md-1-8"></div>
             <div class="pure-u-md-3-4">
                 <div class="pure-g">
                     <div class="pure-u-md-3-4 desktop">
-                        <img src="img/project-9-alternative.jpg">
+                        <img src="img/project-8-seeds.jpg">
                     </div>
                     <div class="pure-u-md-1-4 mobile">
-                        <img src="img/project-9-alternative-mobile.png">
+                        <img src="img/project-8-seeds-mobile.png">
                     </div>
                 </div>
             </div>
@@ -335,15 +337,16 @@
         <div class="pure-g info">
             <div class="pure-u-1-8 pure-u-md-1-6"></div>
             <div class="pure-u-3-4 pure-u-md-2-3">
-                <h2>Alternative Spring Break immersive story</h2>
+                <h2>Growing Veterans immersive story</h2>
                 <p><b>Responsibilities:</b> Interaction design, HTML, CSS, JavaScript, and PHP.</p>
                 <p><b>Tech:</b> GSAP, WordPress, Less, Git, Grunt, Backbone.js, Bootstrap.</p>
-                <p><b>Link: </b><a href="http://www.washington.edu/boundless/alternative-spring-break/">uw.edu/boundless/alternative-spring-break/</a></p>
+                <p><b>Link: </b><a href="http://www.washington.edu/boundless/growing-veterans/">uw.edu/boundless/growing-veterans/</a></p>
             </div>
             <div class="pure-u-1-8 pure-u-md-1-6"></div>
         </div>
 
 </div>
+
 
     </body>
 </html>
