--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
             <div class="pure-u-md-3-4">
                 <div class="pure-g">
                     <div class="pure-u-md-3-4 desktop">
-                        <img src="img/project-10-albothellternative.jpg">
+                        <img src="img/project-10-bothell.jpg">
                     </div>
                     <div class="pure-u-md-1-4 mobile">
                         <img src="img/project-10-bothell-mobile.png">
@@ -274,7 +274,7 @@
                 <h2>Bothell Video Game Studio immersive story</h2>
                 <p><b>Responsibilities:</b> Interaction design, HTML, CSS, JavaScript, and PHP.</p>
                 <p><b>Tech:</b> GSAP, WordPress, Less, Git, Grunt, Backbone.js, Bootstrap.</p>
-                <p><b>Link: </b><a href="http://www.washington.edu/boundless/bothell-gaming/">uw.edu/boundless/alternative-spring-break/</a></p>
+                <p><b>Link: </b><a href="http://www.washington.edu/boundless/bothell-gaming/">uw.edu/boundless/bothell-gaming/</a></p>
             </div>
             <div class="pure-u-1-8 pure-u-md-1-6"></div>
         </div>
