Added plate project

--- a/index.html
+++ b/index.html
@@ -120,17 +120,25 @@
 
 <!-- Piece 2 -->
 
-<div class="project project-2 dark">
+<div class="project project-plate-project dark">
 
         <div class="pure-g images">
             <div class="pure-u-md-1-8"></div>
             <div class="pure-u-md-3-4">
                 <div class="pure-g">
-                    <div class="pure-u-md-3-4 desktop">
-                        <img src="img/project-2-greater.jpg">
+                    <div class="pure-u-md-1-1 desktop">
+                        <img src="img/plate.png">
+                        <video width="480" autoplay loop playsinline
+                          poster="img/poster.jpg" >
+                          <source
+                            src="img/plate.mp4"
+                            type="video/mp4">
+                          Your browser doesn't support HTML5 video tag.
+                        </video>
+                        <img class="mobile-image" src="img/project-plate-mobile.png">
                     </div>
-                    <div class="pure-u-md-1-4 mobile">
-                        <img src="img/project-2-greater-mobile.png">
+                    <div class="pure-u-md-1-4">
+                        
                     </div>
                 </div>
             </div>
@@ -140,10 +148,10 @@
         <div class="pure-g info">
             <div class="pure-u-1-8 pure-u-md-1-6"></div>
             <div class="pure-u-3-4 pure-u-md-2-3">
-                <h2>Seahawks' Russell Okung's charity</h2>
-                <p><b>Responsibilities:</b> Interaction design, full development.</p>
-                <p><b>Tech:</b> Less, Git, Grunt, jQuery, Bootstrap.</p>
-                <p><b>Link: </b><a href="http://www.begreater.org">begreater.org</a></p>
+                <h2></h2>
+                <p><b>Responsibilities:</b> Concept, design, development</p>
+                <p><b>Tech:</b>  React, Firebase, Git, Grunt</p>
+                <p><b>Link: </b><a href="http://plate-project.surge.sh/">plate-project.surge.sh</a></p>
             </div>
             <div class="pure-u-1-8 pure-u-md-1-6"></div>
         </div>
@@ -177,6 +185,69 @@
                 <p><b>Responsibilities:</b> JavaScript, Interaction design, HTML, and CSS.</p>
                 <p><b>Tech:</b> WordPress, Less, Git, Grunt, Backbone.js, Bootstrap.</p>
                 <p><b>Link: </b><a href="http://www.uw.edu/husky100">uw.edu/husky100</a></p>
+            </div>
+            <div class="pure-u-1-8 pure-u-md-1-6"></div>
+        </div>
+
+</div>
+<!-- Piece 2 -->
+
+<div class="project project-2 dark">
+
+        <div class="pure-g images">
+            <div class="pure-u-md-1-8"></div>
+            <div class="pure-u-md-3-4">
+                <div class="pure-g">
+                    <div class="pure-u-md-3-4 desktop">
+                        <img src="img/project-2-greater.jpg">
+                    </div>
+                    <div class="pure-u-md-1-4 mobile">
+                        <img src="img/project-2-greater-mobile.png">
+                    </div>
+                </div>
+            </div>
+            <div class="pure-u-md-1-8"></div>
+        </div>
+
+        <div class="pure-g info">
+            <div class="pure-u-1-8 pure-u-md-1-6"></div>
+            <div class="pure-u-3-4 pure-u-md-2-3">
+                <h2>Seahawks' Russell Okung's charity</h2>
+                <p><b>Responsibilities:</b> Interaction design, full development.</p>
+                <p><b>Tech:</b> Less, Git, Grunt, jQuery, Bootstrap.</p>
+                <p><b>Link: </b><a href="http://www.begreater.org">begreater.org</a></p>
+            </div>
+            <div class="pure-u-1-8 pure-u-md-1-6"></div>
+        </div>
+
+</div>
+
+
+<!-- Piece 6 -->
+
+<div class="project project-6">
+
+        <div class="pure-g images">
+            <div class="pure-u-md-1-8"></div>
+            <div class="pure-u-md-3-4">
+                <div class="pure-g">
+                    <div class="pure-u-md-1-4">
+                        <img src="img/orb.gif">
+                    </div>
+                    <div class="pure-u-md-3-4">
+                        <img src="img/project-6-orbt.jpg">
+                    </div>
+                </div>
+            </div>
+            <div class="pure-u-md-1-8"></div>
+        </div>
+
+        <div class="pure-g info">
+            <div class="pure-u-1-8 pure-u-md-1-6"></div>
+            <div class="pure-u-1-2 ure-u-md-2-3">
+                <h2>Orbt app prototype</h2>
+                <p><b>Responsibilities:</b> Design, Full-app prototyping.</p>
+                <p><b>Tech:</b> Origami (Quartz Composer)</p>
             </div>
             <div class="pure-u-1-8 pure-u-md-1-6"></div>
         </div>
@@ -281,50 +352,20 @@
 
 </div>
 
-<!-- Piece 6 -->
-
-<div class="project project-6">
-
-        <div class="pure-g images">
-            <div class="pure-u-md-1-8"></div>
-            <div class="pure-u-md-3-4">
-                <div class="pure-g">
-                    <div class="pure-u-md-1-4">
-                        <img src="img/orb.gif">
-                    </div>
-                    <div class="pure-u-md-3-4">
-                        <img src="img/project-6-orbt.jpg">
-                    </div>
-                </div>
-            </div>
-            <div class="pure-u-md-1-8"></div>
-        </div>
-
-        <div class="pure-g info">
-            <div class="pure-u-1-8 pure-u-md-1-6"></div>
-            <div class="pure-u-1-2 ure-u-md-2-3">
-                <h2>Orbt app prototype</h2>
-                <p><b>Responsibilities:</b> Design, Full-app prototyping.</p>
-                <p><b>Tech:</b> Origami (Quartz Composer)</p>
-            </div>
-            <div class="pure-u-1-8 pure-u-md-1-6"></div>
-        </div>
-
-</div>
 
 <!-- Piece 7 -->
 
 
 
 
-<div class="project project-4 dark">
+<div class="project project-4">
 
         <div class="pure-g images">
             <div class="pure-u-md-1-8"></div>
             <div class="pure-u-md-3-4">
                 <div class="pure-g">
                     <div class="pure-u-md-3-4 desktop">
-                        <img src="img/project-8-seeds.jpg">
+                        <img src="img/project-8-seeds-whit.jpg">
                     </div>
                     <div class="pure-u-md-1-4 mobile">
                         <img src="img/project-8-seeds-mobile.png">
