Added plate project

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         <div class="pure-g info">
             <div class="pure-u-1-8 pure-u-md-1-6"></div>
             <div class="pure-u-3-4 pure-u-md-2-3">
-                <h2></h2>
+                <h2>The Plate Project</h2>
                 <p><b>Responsibilities:</b> Concept, design, development</p>
                 <p><b>Tech:</b>  React, Firebase, Git, Grunt</p>
                 <p><b>Link: </b><a href="http://plate-project.surge.sh/">plate-project.surge.sh</a></p>
